--- a/index.html
+++ b/index.html
@@ -65,11 +65,10 @@
 
 				<section id="three" class="wrapper style2 special">
 					<header class="major">
-						<h2>维奥网路提供技术支持 版权所有©
-							2022-2082</h2>
+						<h2>兜导网路提供技术支持 版权所有©2023-2082</h2>
 					</header>
 					<ul class="actions special">
-						<li><a href="https://qm.qq.com/cgi-bin/qm/qr?k=MWDv8KSDe_BnRRUYTClZf-4KseipJgRH&jump_from=webapi&authKey=qFsMULtpx/xSH5LqOJ+kfbX0AXtBV2lL0gxfZOQWCQOzbHOUqN7PiyYJfc2i3Ryt"
+						<li><a href="https://work.weixin.qq.com/kfid/kfc344577416f4ec64e"
 								class="button">联系我们</a></li>
 
 					</ul>
