--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 				<h1><a href="#">苹果微信分身</a></h1>
 				<p>正版授权 安全防封 终身维护 免费更新<a href=""> </a></p>
 				<ul class="actions">
-					<li><a href="https://work.weixin.qq.com/kfid/kfc344577416f4ec64e"
+					<li><a href="https://xhzapp.lanzoum.com/b0bby6dqh"
 							class="button primary icon fa-download">下载地址</a></li>
-					<li><a href="https://work.weixin.qq.com/kfid/kfc344577416f4ec64e"
+					<li><a href="https://alist.hhhyy.top"
 							class="button primary icon fa-download">备用下载</a></li>
 					<li><a href="https://xiaoheize.app/png.png" class="button primary icon fa-download">查看功能</a></li>
 					<li><a href="https://work.weixin.qq.com/kfid/kfc344577416f4ec64e"
